Changes from Ant 1.7.0RC1 to current SVN version
==================================================

Changes that could break older environments:
-------------------------------------------

Fixed bugs:
-----------

* docletpath attribute of javadoc ignored.
  Bugzilla 40900.

Other changes:
--------------

Changes from Ant 1.7.0Beta3 to Ant 1.7.0RC1
===========================================

Changes that could break older environments:
-------------------------------------------

Fixed bugs:
-----------

* OOM caused by IH holding on to classes and thus their classloaders.
  Bugzilla 28283 and 33061.

* <delete> doesnt delete when defaultexcludes="false" and no includes is set 
  fixed. Bugzilla 40313.

* behavior change of DirectoryScanner/AbstractFileset when conditional include
  patterns are used. Bugzilla 40722.

* <javac> fails with NPE when compiling with eclipse ecj 3.1.x.
  Bugzilla 40839.

* JUnitTestRunner had a NPE when unable to create parser, the exception
  containing the error did not get reported. Bugzilla 36733.
  
Other changes:
--------------

* Upgraded XML API and parser to Xerces 2.8.1

* A code review of some threaded logic has tightened up the synchronization
  of Watchdog, ExecuteWatchdog and ExecuteJava, which could reduce the occurence
  of race conditions here, especially on Java1.5+.

* Allow broken reference build files. The defer reference processing would
  break too many files - so allow them with a warning.

* removed dependence on sun.misc.UUEncoder for UUMailer.

* added regex attribute to the echoproperties task.
  Bugzilla 40019.

* <war> task now allows you to omit the web.xml file. as this is optional
  in the servlet 2.5 and Java EE 5 APIs. set needxmlfile="false" to
  avoid a missing web.xml file from halting the build.  

* Diagnostics catches and logs security exceptions when accessing system properties.

* <javadoc> useexternalfile now applies to all command line arguments
  of javadoc. Bugzilla report 40852.
